fix (style): set drag-sidebar z-index to 999 (#4059)

--- a/packages/insomnia-app/app/ui/css/components/wrapper.less
+++ b/packages/insomnia-app/app/ui/css/components/wrapper.less
@@ -82,9 +82,10 @@
     }
   }
 
-  .pane-one, .pane-two {
+  .pane-one,
+  .pane-two {
     min-width: 0;
-    max-height:100%;
+    max-height: 100%;
     background: inherit;
     border-left: 1px solid var(--hl-md);
     background: var(--color-bg);
@@ -128,7 +129,7 @@
 
 .drag--sidebar {
   grid-column-start: 3;
-  z-index: 1000;
+  z-index: 999;
   grid-column-end: span 1;
 }
 
